# ltgbot

./: CMakeLists.txt  README.md
include/ltgbot/: exceptions.hpp  https.hpp  ltgbot.hpp
include/ltgbot/exceptions/: ltgbot_exception.hpp
include/ltgbot/exceptions/https/: curl_easy_init_exception.hpp  curl_easy_perform_exception.hpp
include/ltgbot/exceptions/telegram/: telegram_exception.hpp
include/ltgbot/types/: chat.hpp  message.hpp  simple_types.hpp  types.hpp  update.hpp  user.hpp
src/: chat.cpp  exception.cpp  https.cpp  ltgbot.cpp  message.cpp  update.cpp  user.cpp
src/exceptions/https/: curl_easy_init_exception.cpp  curl_easy_perform_exception.cpp
src/exceptions/telegram/: telegram_exception.cpp
src/ltgbot/: exception.hpp  https.hpp  ltgbot.hpp
src/ltgbot/types/: chat.hpp  message.hpp  types.hpp  update.hpp  user.hpp
src/types/: chat.cpp  message.cpp  update.cpp  user.cpp
